--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="night">Noite</string>
 
     <string name="sucess_message">Configurações salvas com sucesso.</string>
+    <string name="error_data">Erro ao obter dados</string>
 </resources>
